proj1/testing/error/wrongMovingRotors.inp
* B BETA GAMMA I II (AAAA)
HELLO WORLD